<resources>
    <string name="app_name">Tour Guide Sri Lanka</string>
    <string name="logo_name">Tour Guide Sri Lanka</string>
    <string name="slogan_name">We will help you to find your way</string>
    <string name="powered_by">Powered by Code Warriors</string>
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Sit Back And Enjoy</string>
    <string name="first_slide_desc">You can search any places you looking. We will display all the specific or all related details about the location</string>
    <string name="second_slide_desc">We provide all the numbers all the details of all departments and shops registered with us.</string>
    <string name="third_slide_desc">We will handle every thing for you. As You have the app in your pocket then you don\'t have to worry</string>
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <string name="travel">Travelling Places</string>
    <string name="hotel_and_restaurant">Hotels/ Restaurants</string>
    <string name="event">Travel Events</string>
    <string name="travel_review">Travel Review</string>
    <string name="view">VIEW</string>
    <string name="home">Home</string>
    <string name="place_categories">All Travelling Places</string>
    <string name="enevnt_nav">All Events</string>
    <string name="hotel_nav">All Hospitality Places</string>
    <string name="add_places">Add Missing Places</string>
    <string name="add_hotels">Add Hotel/Restaurant</string>
    <string name="add_events">Add Missing Events</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="adventure_places">Adventure Places</string>
    <string name="historical_sites">Historical Sites</string>
    <string name="coastal_areas">Coastal Areas</string>
    <string name="hillside_areas">Hillside Areas</string>
    <string name="expand_all">Expand All</string>
    <string name="add_travel_place">Add Travelling Place</string>
    <string name="submit">Submit</string>
    <string name="choose">Choose</string>
    <string name="edit_travel_place">Edit Travelling Place</string>
    <string name="update">Update</string>
    <string name="description">Description</string>
    <string name="province">Situated In</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="delete">Delete</string>
    <string name="add_event">Add Event</string>
    <string name="event_name">Event Name</string>
    <string name="place_name">Place Name</string>
    <string name="provincee">Province</string>
    <string name="city">City</string>
    <string name="add">Add</string>
    <string name="namee">Name</string>
    <string name="phoneNo">Contact No</string>
    <string name="price">Price</string>
    <string name="backk">Back</string>
    <string name="select">Choose</string>
    <string name="about_event">About Event</string>
    <string name="loc_info">Location Information</string>
    <string name="con_info">Contact Information</string>
    <string name="signUp">SIGN UP NOW</string>
    <string name="Fname">First name</string>
    <string name="Lname">Last Name</string>
    <string name="mobile">Mobile no</string>
    <string name="mail">Email</string>
    <string name="pass">Password</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="signUpButton">Sign Up</string>
    <string name="ClickLogin">Click here to log in</string>
    <string name="username">Email</string>
    <string name="logpasswor">Password</string>
    <string name="loginbutton">Log In</string>
    <string name="logcreateacount">Click here to create Account</string>
    <string name="grnaral">General</string>
    <string name="prosettinbutton">Profile Setting</string>
    <string name="support">Support Services</string>
    <string name="Contact">Contact Us</string>
    <string name="profdescr">Write about Your experiences /give ideas about new things / any recommendations etc.</string>
    <string name="makereview">Make Review</string>
    <string name="delaccount">Delete Account</string>
    <string name="reviewname">Name :</string>
    <string name="reviewmobile">Mobile :</string>
    <string name="reviewemail">Mail :</string>
    <string name="reviewdescript">Tell us Your experiences / ideas of the places and hotels / any recommendations</string>
    <string name="reviewcancel">Cancel</string>
    <string name="reviewsubmit">Submit</string>
    <string name="Editprofileinfo">Edit Your Profile Info</string>
    <string name="addprofile">Add Profile Picture</string>
    <string name="updateprof">Update and Modify Profile</string>
    <string name="editfname">First Name</string>
    <string name="editLname">Last Name</string>
    <string name="editmobile">Mobile Number</string>
    <string name="editmail">Email or Gmail</string>
    <string name="editpass">New Password</string>
    <string name="editconfpass">Confirm New Password</string>
    <string name="editresetbuton">Reset</string>
    <string name="editSavebutton">Update and Save Details</string>
    <string name="cusreview">Customer Reviews</string>
    <string name="signupdescri">Already have an Account ? LOG IN</string>
    <string name="logindescr">LOG IN</string>
    <string name="logdescr">Don\'t have Account ? SIGN UP</string>
    <string name="prof">My Profile</string>
    <string name="review_about_hotel">***</string>
    <string name="Review_About_yourexperience">***</string>
    <string name="otherreview_and_recommendation">***</string>
    <string name="reviewer_name">Unknown</string>
    <string name="RESET">Reset</string>
    <string name="title_activity_customer__review">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="suppportservice">www.TourGuidLanka.com</string>
    <string name="makereviewheader">Make Your Review</string>
    <string name="makereviews">Write here....</string>
    <string name="signupusername">User Name</string>
</resources>