<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/menu_dashboard_icon"
            android:id="@+id/nav_home"
            android:title="@string/home"/>
    </group>

    <item android:title="Profile">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/menu_login_icon"
                    android:id="@+id/nav_login"
                    android:title="@string/login" />
                <item
                    android:icon="@drawable/menu_profile_icon"
                    android:id="@+id/nav_profile"
                    android:title="@string/profile" />
                <item
                    android:icon="@drawable/menu_logout_icon"
                    android:id="@+id/nav_logout"
                    android:title="@string/logout" />
            </group>

        </menu>
    </item>

</menu>