<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.TravellingPlacesCategories">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/lightWhite"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/back_pressed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/back_icon" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/travel"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="25dp"
                android:background="@drawable/card_view_1">

                <TextView
                    android:layout_width="228dp"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:text="@string/adventure_places"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:text="@string/expand_all"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </RelativeLayout>

            <ImageView
                android:layout_width="160dp"
                android:layout_height="130dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-2dp"
                android:src="@drawable/adventurous_areas_img" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="25dp"
                android:background="@drawable/card_view_2">

                <TextView
                    android:layout_width="228dp"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:text="@string/historical_sites"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:onClick="expandHistoricalPlaces"
                    android:padding="20dp"
                    android:text="@string/expand_all"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </RelativeLayout>


            <ImageView
                android:layout_width="180dp"
                android:layout_height="165dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-20dp"
                android:src="@drawable/historical_sites_img" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="25dp"
                android:background="@drawable/card_view_3">

                <TextView
                    android:layout_width="228dp"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:text="@string/hillside_areas"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:text="@string/expand_all"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </RelativeLayout>


            <ImageView
                android:layout_width="170dp"
                android:layout_height="195dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-40dp"
                android:src="@drawable/hillside_areas_img" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="25dp"
                android:background="@drawable/card_view_4">

                <TextView
                    android:layout_width="228dp"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:text="@string/coastal_areas"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:text="@string/expand_all"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </RelativeLayout>


            <ImageView
                android:layout_width="190dp"
                android:layout_height="155dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-5dp"
                android:src="@drawable/coastal_areas_img" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>